--- a/styles/index.scss
+++ b/styles/index.scss
@@ -13,8 +13,19 @@ body {
 html {
   height: 100vh; /* set viewport constraint */
   min-height: 100%; /* enforce height */
+  font-family: "Poppins", sans-serif;
+  font-display:swap;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  color: #555555;
+  margin: 0;
+  padding: 0;
+  background-color: #f7f7f7;
+  min-height: 100%;
+  height: 100vh;
 }
 * {
+  
   box-sizing: border-box;
   &::-moz-selection {
     background-color: palevioletred;
