added newest ui and image magnify and text styles

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -10,6 +10,7 @@ $green-color: #2eca6a;
   transition: all 0.5s ease-in-out;
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
+  font-family: Audiowide;
   .hamburger{
     margin-left: auto;
     height:40px;
@@ -32,6 +33,7 @@ $green-color: #2eca6a;
   }
   .header {
     all: inherit;
+    
     // width: 100%;
     // display: flex;
     // position: fixed;
@@ -91,7 +93,7 @@ $green-color: #2eca6a;
         -webkit-transition: 0.4s;
         transition: 0.4s;
         &:hover {
-          color: white;
+          color:$green-color
         }
       }
     }
@@ -111,4 +113,78 @@ $green-color: #2eca6a;
     color: white !important;
   }
   
+}
+
+:root{--accent: #04da97;
+--border-width: 6px;
+--border-radius: 55px;
+--font-size: 10px;
+}
+//Switch toggle
+.toggle-wrap {
+  perspective: 200px;
+}
+
+.toggle {
+  border: solid var(--border-width) var(--accent);
+  border-radius: var(--border-radius);
+  transition: transform cubic-bezier(0, 0, 0.30, 2) .4s;
+  transform-style: preserve-3d;
+  perspective: 200px;
+}
+
+.toggle>input[type="radio"] {
+  display: none;
+}
+
+.toggle>#choice1:checked~#flap {
+  transform: rotateY(-180deg);
+}
+
+.toggle>#choice1:checked~#flap>.content {
+  transform: rotateY(-180deg);
+}
+
+.toggle>#choice2:checked~#flap {
+  transform: rotateY(0deg);
+}
+
+.toggle>label {
+  display: inline-block;
+  min-width: 10px;
+  padding: 10px;
+  font-size: var(--font-size);
+  text-align: center;
+  color: var(--accent);
+  cursor: pointer;
+}
+
+.toggle>label,
+.toggle>#flap {
+  font-weight: bold;
+  text-transform: capitalize;
+}
+
+.toggle>#flap {
+  position: absolute;
+  top: calc( 0px - var(--border-width));
+  left: 50%;
+  height: calc(100% + var(--border-width) * 2);
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--font-size);
+  background-color: var(--accent);
+  border-top-right-radius: var(--border-radius);
+  border-bottom-right-radius: var(--border-radius);
+  transform-style: preserve-3d;
+  transform-origin: left;
+  transition: transform cubic-bezier(0.4, 0, 0.2, 1) .5s;
+}
+
+.toggle>#flap>.content {
+  color: #333;
+  transition: transform 0s linear .25s;
+  transform-style: preserve-3d;
 }
