--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -19,6 +19,21 @@
     font-size: 4em;
   }
 }
+
+.name{
+  background-size: 120% 100%;
+  animation: .8s shake alternate;
+}
+@keyframes shake {
+  0% { transform: skewX(-15deg); }
+  5% { transform: skewX(15deg); }
+  10% { transform: skewX(-15deg); }
+  15% { transform: skewX(15deg); }
+  20% { transform: skewX(0deg); }
+  100% { transform: skewX(0deg); }  
+}
+
+
 .mobile {
   background-attachment: scroll;
 }
