--- a/components/Subscribe/Subscribe.scss
+++ b/components/Subscribe/Subscribe.scss
@@ -51,6 +51,7 @@
     border-radius: 0;
     font-size: 1.1rem;
     font-weight: 300;
+    border-radius: 50px;
     display: inline-block;
     &:focus {
       border: 2px solid #6a82fb;
