--- a/components/Auth/login.scss
+++ b/components/Auth/login.scss
@@ -3,130 +3,137 @@ body {
     overflow: hidden;
   }
 }
-.login-list{
+.login-list {
   display: flex;
   justify-content: space-between;
 }
 #signup-container {
-  position:fixed;
-  display:table;
-  height:400px;
-  width:30%;
-  top:8%;
-  left:35%;
-  transform:scale(0);
-  z-index:1;
+  position: fixed;
+  height: 400px;
+  width: 40%;
+  top: 8%;
+  left: 30%;
+  transform: scale(0);
+  z-index: 1;
+  @media screen and (max-width: 768px) {
+    height: 70%;
+    width: 80%;
+    top: 20%;
+    left: 10%;
+  }
   &.popup {
-    transform:scaleY(.01) scaleX(0);
-    animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+    transform: scaleY(0.01) scaleX(0);
+    animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
     .modal-background {
-      .modal {
-        transform:scale(0);
-        animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      .modal-inner {
+        transform: scale(0);
+        animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
       }
     }
     &.out {
-      transform:scale(1);
-      animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      transform: scale(1);
+      animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
       .modal-background {
-        .modal {
-          animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        .modal-inner {
+          animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
         }
       }
     }
   }
 }
 #login-container {
-  position:fixed;
-  display:table;
-  height:400px;
-  width:30%;
-  top:8%;
-  left:35%;
-  transform:scale(0);
-  z-index:1;
+  position: fixed;
+  height: 400px;
+  width: 40%;
+  top: 8%;
+  left: 30%;
+  transform: scale(0);
+  z-index: 1;
+  @media screen and (max-width: 768px) {
+    height: 70%;
+    width: 80%;
+    top: 20%;
+    left: 10%;
+  }
   &.popup {
-    transform:scaleY(.01) scaleX(0);
-    animation:unfoldIn 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+    transform: scaleY(0.01) scaleX(0);
+    animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
     .modal-background {
-      .modal {
-        transform:scale(0);
-        animation: zoomIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      .modal-inner {
+        transform: scale(0);
+        animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
       }
     }
     &.out {
-      transform:scale(1);
-      animation:unfoldOut 1s .3s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+      transform: scale(1);
+      animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
       .modal-background {
-        .modal {
-          animation: zoomOut .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+        .modal-inner {
+          animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
         }
       }
     }
   }
 }
 
-
 .modal-background {
-  background-image:url('https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/aurora-borealis-1933239+(1).jpg');
+  background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/aurora-borealis-1933239+(1).jpg");
   background-size: cover;
   background-position: center;
-  .modal {
-    background:white;
-    padding:50px;
-    display:flex;
-    border-radius:30px;
-    position:relative;
+  .modal-inner {
+    background: rgba(#333333,0.5);
+    padding: 50px;
+    display: flex;
+    position: relative;
     h2 {
-      font-size:25px;
-      line-height:25px;
-      margin-bottom:15px;
+      font-size: 25px;
+      line-height: 25px;
+      margin-bottom: 15px;
     }
     p {
-      font-size:18px;
-      line-height:22px;
+      font-size: 18px;
+      line-height: 22px;
     }
-    
   }
 }
 
 @keyframes unfoldIn {
   0% {
-    transform:scaleY(.005) scaleX(0);
+    transform: scaleY(0.005) scaleX(0);
   }
   50% {
-    transform:scaleY(.005) scaleX(1);
+    transform: scaleY(0.005) scaleX(1);
   }
   100% {
-    transform:scaleY(1) scaleX(1);
+    transform: scaleY(1) scaleX(1);
   }
 }
 
 @keyframes unfoldOut {
   0% {
-    transform:scaleY(1) scaleX(1);
+    transform: scaleY(1) scaleX(1);
   }
   50% {
-    transform:scaleY(.005) scaleX(1);
+    transform: scaleY(0.005) scaleX(1);
   }
   100% {
-    transform:scaleY(.005) scaleX(0);
+    transform: scaleY(0.005) scaleX(0);
   }
 }
 @keyframes zoomIn {
   0% {
-    transform:scale(0);
+    transform: scale(0);
   }
   100% {
-    transform:scale(1);
+    transform: scale(1);
   }
 }
 
 @keyframes zoomOut {
   0% {
-    transform:scale(1);
+    transform: scale(1);
   }
   100% {
-    transform:scale(0);
+    transform: scale(0);
   }
 }
