--- a/components/Header/Hamburger/Hamburger.scss
+++ b/components/Header/Hamburger/Hamburger.scss
@@ -12,9 +12,8 @@
 .hamburgers {
   display: flex;
   justify-content: center;
-
-
 }
+
 
 .hamburgers{
     width: 2em;
@@ -34,6 +33,34 @@
     height: 3px;
     background: white;
     transition: transform 350ms ease-in-out, opacity 200ms linear;
+  }
+}
+.dropdown-mobile {
+ 
+  &:hover {
+    .dropdown-mobile-submenu {
+      display: block;
+    }
+  }
+  .dropdown-mobile-submenu {
+    font-weight: 300;
+    text-transform: none;
+    right: 10px;
+    display: none;
+    position: absolute;
+    width: 150px;
+    background-color: #fff;
+    .dropdown-list{
+      padding: 0;
+    }
+    &-item {
+      a{
+        color: #333333;
+      }
+      &:hover {
+        background: rgba(#000, 0.9);
+      }
+    }
   }
 }
 
