--- a/components/Subscribe/Subscribe.scss
+++ b/components/Subscribe/Subscribe.scss
@@ -48,7 +48,6 @@
     height: 3.5rem;
   }
   .form-control {
-    border-radius: 0;
     font-size: 1.1rem;
     font-weight: 300;
     border-radius: 50px;
@@ -57,6 +56,8 @@
       border: 2px solid #6a82fb;
       border-color: #6a82fb;
       box-shadow: none;
+      outline:none;
+
     }
   }
   .form-control.form-control-a {
