--- a/components/Jumbo/Jumbo.scss
+++ b/components/Jumbo/Jumbo.scss
@@ -39,7 +39,7 @@
   -o-background-size: cover;
   background-size: cover;
   min-height: 100vh;
-  background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/asphalt-environment-grass-highway-239520+(1).jpg");
+  // background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/asphalt-environment-grass-highway-239520+(1).jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: fixed;
@@ -59,7 +59,7 @@
 .english {
   // https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/asphalt-environment-grass-highway-239520+(1).jpg
   // https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/landscape-photo-of-mountain-with-polar-lights-1434608+(1).jpg
-  background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/landscape-photo-of-mountain-with-polar-lights-1434608+(1).jpg");
+  // background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/landscape-photo-of-mountain-with-polar-lights-1434608+(1).jpg");
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
