--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -1,5 +1,5 @@
 .blog {
-  background-image: url("https://s3.us-east-2.amazonaws.com/www.bananaboom.space/images/aerial-alpine-ceresole-reale-desktop-backgrounds-1562+(1).jpg");
+  background-image: url("https://images.unsplash.com/photo-1497436072909-60f360e1d4b1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80");
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
