--- a/components/Auth/login.scss
+++ b/components/Auth/login.scss
@@ -12,17 +12,39 @@ body {
 .signup-container {
   font-family: "Poppins", sans-serif;
   position: fixed;
-  width: 40%;
+  width: 30%;
   top: 1%;
   left: 30%;
   transform: scale(0);
   z-index: 5;
-  @media screen and (max-width: 768px) {
+ 
+  @media screen and (max-width: 415px) {
     height: 30vh;
-    width: 70%;
+    width: 100%;
     top: 5%;
     bottom:20%;
-    left: 15%;
+    left: 1%;
+  }
+  @media screen and (min-width: 415px) and (max-width: 768px) {
+    height: 30vh;
+    width: 80%;
+    top: 10%;
+    bottom:20%;
+    left: 10%;
+  }
+  @media screen and (min-width: 992px) {
+    height: 30vh;
+    width: 30%;
+    top: 5%;
+    bottom:20%;
+    left: 35%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    height: 30vh;
+    width: 40%;
+    top: 10%;
+    bottom:20%;
+    left: 30%;
   }
   &.popup {
     transform: scaleY(0.01) scaleX(0);
@@ -52,11 +74,33 @@ body {
   left: 30%;
   transform: scale(0);
   z-index: 1;
-  @media screen and (max-width: 768px) {
-    height: 400px;
-    width: 70%;
+  @media screen and (max-width: 415px) {
+    height: 30vh;
+    width: 100%;
     top: 5%;
-    left: 15%;
+    bottom:20%;
+    left: 1%;
+  }
+  @media screen and (min-width: 415px) and (max-width: 768px) {
+    height: 30vh;
+    width: 80%;
+    top: 10%;
+    bottom:20%;
+    left: 10%;
+  }
+  @media screen and (min-width: 992px) {
+    height: 30vh;
+    width: 30%;
+    top: 5%;
+    bottom:20%;
+    left: 35%;
+  }
+  @media screen and (min-width: 768px) and (max-width: 992px) {
+    height: 30vh;
+    width: 40%;
+    top: 10%;
+    bottom:20%;
+    left: 30%;
   }
   &.popup {
     transform: scaleY(0.01) scaleX(0);
