--- a/components/Blog/BlogListItem.scss
+++ b/components/Blog/BlogListItem.scss
@@ -25,3 +25,42 @@
   from {background-position:left;}
   to { background-position:right;}
 }
+
+
+.share-button{
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+.share-button-text {
+  visibility: hidden;
+  width: 200px;
+  background-color:#ffff;
+  color: rgb(125, 46, 199);
+  border:2px solid rgb(125, 46, 199);
+  text-align: center;
+  padding: 3px;
+  position: absolute;
+  z-index: 1;
+  bottom: 150%;
+  left: 90%;
+  margin-left: -120px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  &:after {
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    margin-left: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgb(125, 46, 199) transparent transparent transparent;
+  }
+}
+&:hover .share-button-text {
+  visibility: visible;
+  opacity: 1;
+}
+
+}
+
