--- a/components/Layout/Layout.scss
+++ b/components/Layout/Layout.scss
@@ -1,5 +1,5 @@
-.main-fader{
-  width:100%;
+.main-fader {
+  width: 100%;
   height: 100vh;
   position: absolute;
   .loader {
@@ -18,37 +18,80 @@
         color: #eb782e;
 
         &.path-7 {
-          animation-delay: -1s
+          animation-delay: -1s;
         }
         &.path-6 {
-          animation-delay: -.875s
+          animation-delay: -0.875s;
         }
         &.path-5 {
-          animation-delay: -.75s
+          animation-delay: -0.75s;
         }
         &.path-4 {
-          animation-delay: -.625s
+          animation-delay: -0.625s;
         }
         &.path-3 {
-          animation-delay: -.5s
+          animation-delay: -0.5s;
         }
         &.path-2 {
-          animation-delay: -.375s
+          animation-delay: -0.375s;
         }
         &.path-1 {
-          animation-delay: -.25s
+          animation-delay: -0.25s;
         }
         &.path-0 {
-          animation-delay: -.125s
+          animation-delay: -0.125s;
         }
       }
     }
   }
 }
 
-
 @keyframes pulse {
-  0%     { opacity: .1; }
-  30%    { opacity: .8; }
-  100%   { opacity: .1; }
+  0% {
+    opacity: 0.1;
+  }
+  30% {
+    opacity: 0.8;
+  }
+  100% {
+    opacity: 0.1;
+  }
+}
+
+@keyframes spinner {
+  100% {
+    transform: rotate(3600deg);
+  }
+}
+
+.loading-container {
+  text-align: center;
+  position: relative;
+  top: 50vh;
+  transform: translateY(-50%);
+  z-index: 10000;
+  .spinner {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    background: url("https://i.ibb.co/fCS2kDm/lakers-spinner.png") center center;
+    background-size: contain;
+    transition-origin: 50% 50%;
+    animation: spinner 3s infinite alternate ease-in-out;
+  }
+  .spinner-center {
+    display: inline-block;
+    position: absolute;
+
+    background-size: contain;
+    content: "";
+  }
+
+  .loading-text {
+    position: relative;
+    z-index: 1;
+    font-size: 1.5rem;
+    font-family: "Comic Sans MS", cursive, sans-serif;
+    margin-left: 0.5em;
+  }
 }
