--- a/components/Subscribe/Subscribe.scss
+++ b/components/Subscribe/Subscribe.scss
@@ -51,6 +51,7 @@
     font-weight: 300;
     border-radius: 50px;
     display: inline-block;
+    border:1px solid black;
     &:focus {
       border: 2px solid #6a82fb;
       border-color: #6a82fb;
