--- a/components/FloatingHeart/heart.scss
+++ b/components/FloatingHeart/heart.scss
@@ -2,6 +2,7 @@
   fill: #7d32df;
   width: 30px;
   animation: pulse 1s infinite;
+  -webkit-animation: pulse 1s infinite;
 }
 
   .heart-input{
@@ -17,7 +18,11 @@
     }
   }
   
-
+  @-webkit-keyframes pulse {
+    0% { transform: scale(1); }
+    50% { transform: scale(1.3); }
+    100% { transform: scale(1); }
+  } 
 @keyframes pulse {
   0% { transform: scale(1); }
   50% { transform: scale(1.3); }
