--- a/components/Header/DropDown/DropDown.scss
+++ b/components/Header/DropDown/DropDown.scss
@@ -9,6 +9,7 @@
   }
   .dropdown-submenu {
     font-weight: 300;
+    border: 2px solid rgb(125, 46, 199);
     text-transform: none;
     right: 10px;
     display: none;
