--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,4 +1,5 @@
 $green-color: #2eca6a;
+$blue-color:#17cdff;
 .nav{
   width: 100%;
   display: flex;
@@ -60,7 +61,7 @@ $green-color: #2eca6a;
         a{
           color:white;
           &:hover {
-            color:$green-color
+            color:$blue-color
           }
         }
         &.hamburger{
@@ -115,7 +116,7 @@ $green-color: #2eca6a;
         a{
           color:white;
           &:hover {
-            color:$green-color
+            color:$blue-color
           }
         }
         
