--- a/components/Subscribe/Subscribe.scss
+++ b/components/Subscribe/Subscribe.scss
@@ -39,7 +39,7 @@
     cursor: pointer;
   .subscribe-button-text {
     visibility: hidden;
-    width: 200px;
+    width: 50%;
     background-color:#ffff;
     color: rgb(125, 46, 199);
     border:2px solid rgb(125, 46, 199);
@@ -47,11 +47,15 @@
     padding: 3px;
     position: absolute;
     z-index: 1;
-    bottom: 150%;
-    left: 90%;
-    margin-left: -120px;
+    bottom: 100%;
+    left: 30%;
+    margin-left: -50px;
     opacity: 0;
     transition: opacity 0.3s;
+    a{
+      color: rgb(125, 46, 199);
+
+    }
     &:after {
       content: "";
       position: absolute;
