--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -35,7 +35,7 @@
     height: 100vh;
     padding: 10px;
     width: 50vw;
-
+    overflow:scroll;
     .blog-container {
       border-top: 4px dotted yellow;
       .input-section {
