--- a/components/Blog/BlogListItem.scss
+++ b/components/Blog/BlogListItem.scss
@@ -2,7 +2,7 @@
   cursor: pointer;
   height: 70px;
   width: 70px;
-  background-image:url( 'https://s3-ap-southeast-1.amazonaws.com/www.yaobaiyang.com/static/web_heart_animation.png');
+  background-image:url( 'https://res.cloudinary.com/next-bananaboom/image/upload/v1581689083/web_heart_animation_oa9kiz.png');
   background-position: left;
   background-repeat:no-repeat;
   background-size:2900%;
