--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -28,28 +28,37 @@
   }
   @media screen and (min-width: 415px) and (max-width: 768px) {
     flex-direction: column;
-
   }
   @media screen and (min-width: 992px) {
     flex-direction: row;
-
   }
   @media screen and (min-width: 768px) and (max-width: 992px) {
     flex-direction: column;
-
   }
   .love-left-side {
     border-right: 4px dashed yellow;
     height: 100vh;
     padding: 40px;
     overflow: scroll;
-   
+    &::-webkit-scrollbar {
+      width: 1em;
+      background-color:white;
+    }
+     
+    &::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 6px #6a82fb
+    }
+     
+    &::-webkit-scrollbar-thumb {
+      background-color:  #b39be4;
+  
+    }
   }
   .love-right-side {
     height: 100vh;
     padding: 40px;
     overflow: scroll;
-  
+
     .blog-container {
       border-top: 4px dotted yellow;
       .input-section {
