--- a/styles/index.scss
+++ b/styles/index.scss
@@ -5,6 +5,19 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100%;
+  &::-webkit-scrollbar {
+    width: 1em;
+    background-color:white;
+  }
+   
+  &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px #394041
+  }
+   
+  &::-webkit-scrollbar-thumb {
+    background-color:  #394041;
+
+  }
 }
 * {
   box-sizing: border-box;
