--- a/components/Private/CountDate/countdate.scss
+++ b/components/Private/CountDate/countdate.scss
@@ -5,8 +5,8 @@
   width: 100%;
 }
 .countdown-private{
-  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
-    url("https://images.unsplash.com/photo-1467810563316-b5476525c0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1349&q=80");
+  background-image: linear-gradient(rgba(219, 91, 255, 0.3), rgba(224, 70, 255, 0.3)),
+    url("https://storage.pixteller.com/designs/designs-images/2019-03-27/05/love-and-passion-background-backgrounds-romantic-1-5c9b9943567d4.png");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
