--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,7 @@
-body {
+
+@import url('https://fonts.googleapis.com/css?family=Poppins|Sriracha&display=swap');
+
+ body {
   font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   color: #333;
