--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -11,7 +11,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-attachment: scroll;
-  font-family: Audiowide;
+  font-family: 'Sriracha', cursive;
   
 }
 .shrinked{
