--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Concert+One&display=swap");
 .love-container {
   font-family: "Concert One", cursive;
-  background-image: url("https://lh3.googleusercontent.com/proxy/8SEPxdkLH3YfnQHDXPY2Ii9SgwbsJNB-xhmEkx4hEtXgdvVDqMXp2cCCIjolrJuBUm6wV1EvtyhXiLNX3gNURlwTpysJbw1OB2XSOMI");
+  background-image: url("https://res.cloudinary.com/next-bananaboom/image/upload/v1582091001/unnamed_gzqwqi.jpg");
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
