--- a/components/Private/CountDate/countdate.scss
+++ b/components/Private/CountDate/countdate.scss
@@ -32,10 +32,10 @@
     bottom: 0;
     right: 0;
     background-repeat: repeat;
-    height: 15px;
-    background-size: 40px 20px;
+    height: 10px;
+    background-size: 30px;
     background-image:
-      radial-gradient(circle at 20px 15px, white 12px, transparent 13px);
+      radial-gradient(circle at 15px 15px, white 15px, transparent 15px);
   }
 }
 
