--- a/pages/youandme/youandme.scss
+++ b/pages/youandme/youandme.scss
@@ -65,11 +65,11 @@
     }
      
     &::-webkit-scrollbar-track {
-      box-shadow: inset 0 0 6px #6a82fb
+      box-shadow: inset 0 0 3px #384db5
     }
      
     &::-webkit-scrollbar-thumb {
-      background-color:  #b39be4;
+      background-color:  #DFD0F0;
   
     }
   }
