--- a/pages/blogs/Blog.scss
+++ b/pages/blogs/Blog.scss
@@ -1,5 +1,5 @@
 .blog {
-  background-image: url("https://i.ibb.co/xFVgxpc/haokan.jpg");
+  background-image: url("https://res.cloudinary.com/next-bananaboom/image/upload/v1582173613/WechatIMG13_rby3bj.jpg");
   -webkit-background-size: 100%;
   -moz-background-size: 100%;
   -o-background-size: 100%;
